--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <br>
 <h2> 프로젝트 내용 </h2>
 <a href = “https://editor.p5js.org/eunsu03/sketches/D793GRRkX”> 프로젝트로 이동하기 </a>
-<p>https://editor.p5js.org/eunsu03/sketches/D793GRRkX (바로가기 불가시 붙여넣기 해주세요) </p>
+<p> </p>https://editor.p5js.org/eunsu03/sketches/D793GRRkX (바로가기 불가시 붙여넣기 해주세요) </p>
 <br>
 <h3> 개요 </h3>
 <p> 사용자가 입력한 감정을 기반으로 플레이스트를 추천해주는 감정 기반 음악 큐레이션 웹앱입니다. </p>
